[Mohist] Fix Java 16 compatibility